# torch_cplusplus_playground

./: CMakeLists.txt  main.cpp
simple_examples/feedforward_net/: CMakeLists.txt
simple_examples/feedforward_net/include/: network.h
simple_examples/feedforward_net/src/: main.cpp
